--- a/adyen-appexchange/main/default/classes/AdyenConstants.cls
+++ b/adyen-appexchange/main/default/classes/AdyenConstants.cls
@@ -14,6 +14,8 @@ public with sharing class AdyenConstants {
     public static final String NOTIFICATION_REQUEST_TYPE_REFUND   = 'refund';
     @TestVisible
     public static final String NOTIFICATION_ACCEPTED_RESPONSE     = '[accepted]';
+    @TestVisible
+    public static final String NOTIFICATION_RECEIVED     = '[received]';
 
     public static final CommercePayments.SalesforceResultCodeInfo SUCCESS_SALESFORCE_RESULT_CODE_INFO =
             new CommercePayments.SalesforceResultCodeInfo(CommercePayments.SalesforceResultCode.Success);
